--- a/Website/Resources/SharedResources.resx
+++ b/Website/Resources/SharedResources.resx
@@ -132,4 +132,136 @@
   <data name="navmenu_admin" xml:space="preserve">
     <value>Администрирование</value>
   </data>
+  <data name="overview_authorization" xml:space="preserve">
+    <value>Авторизация</value>
+  </data>
+  <data name="login_username" xml:space="preserve">
+    <value>Имя пользователя</value>
+  </data>
+  <data name="login_password" xml:space="preserve">
+    <value>Пароль</value>
+  </data>
+  <data name="login_remember" xml:space="preserve">
+    <value>Запомнить это устройство</value>
+  </data>
+  <data name="login_login" xml:space="preserve">
+    <value>Войти</value>
+  </data>
+  <data name="login_register" xml:space="preserve">
+    <value>Зарегистр.</value>
+  </data>
+  <data name="login_forgot" xml:space="preserve">
+    <value>Забыли пароль?</value>
+  </data>
+  <data name="overview_overview" xml:space="preserve">
+    <value>Обзор</value>
+  </data>
+  <data name="top_createissue" xml:space="preserve">
+    <value>Создать Задачу</value>
+  </data>
+  <data name="top_login" xml:space="preserve">
+    <value>Вход</value>
+  </data>
+  <data name="top_register" xml:space="preserve">
+    <value>Регистрация</value>
+  </data>
+  <data name="projects_all" xml:space="preserve">
+    <value>Все Проекты - {0}</value>
+  </data>
+  <data name="projects_nothing" xml:space="preserve">
+    <value>Нет проектов для отображения.</value>
+  </data>
+  <data name="projects_nothing_create_new" xml:space="preserve">
+    <value>Создайте новый проект на странице Администрирования.</value>
+  </data>
+  <data name="projects_title" xml:space="preserve">
+    <value>Список Проектов</value>
+  </data>
+  <data name="projects_select_category" xml:space="preserve">
+    <value>Выбрать Категорию:</value>
+  </data>
+  <data name="projects_all_categories" xml:space="preserve">
+    <value>Все категории</value>
+  </data>
+  <data name="projects_p_name" xml:space="preserve">
+    <value>Проект</value>
+  </data>
+  <data name="projects_p_code" xml:space="preserve">
+    <value>Код</value>
+  </data>
+  <data name="projects_p_manager" xml:space="preserve">
+    <value>Проектный Менеджер</value>
+  </data>
+  <data name="projects_p_category" xml:space="preserve">
+    <value>Категория</value>
+  </data>
+  <data name="projects_p_url" xml:space="preserve">
+    <value>URL Проекта</value>
+  </data>
+  <data name="projects_p_no_url" xml:space="preserve">
+    <value>Нет URL Проекта</value>
+  </data>
+  <data name="projects_search" xml:space="preserve">
+    <value>Поиск</value>
+  </data>
+  <data name="filebadge_deleted" xml:space="preserve">
+    <value>Удалено</value>
+    <comment>filebadge_deleted</comment>
+  </data>
+  <data name="filebadge_delete" xml:space="preserve">
+    <value>Удалить файл?</value>
+    <comment>filebagde_delete</comment>
+  </data>
+  <data name="filebadge_not_found" xml:space="preserve">
+    <value>Файл не найден</value>
+    <comment>filebadge_not_found</comment>
+  </data>
+  <data name="navmenu_info" xml:space="preserve">
+    <value>Информация</value>
+    <comment>navmenu_info</comment>
+  </data>
+  <data name="navmenu_issues" xml:space="preserve">
+    <value>Задачи</value>
+    <comment>navmenu_issues</comment>
+  </data>
+  <data name="register_username" xml:space="preserve">
+    <value>Имя пользователя</value>
+    <comment>register_username</comment>
+  </data>
+  <data name="register_have_account" xml:space="preserve">
+    <value>Уже есть аккаунт?</value>
+    <comment>register_have_account</comment>
+  </data>
+  <data name="register_register" xml:space="preserve">
+    <value>Зарегистрироваться</value>
+    <comment>register_register</comment>
+  </data>
+  <data name="register_repeat_password" xml:space="preserve">
+    <value>Повтор пароля</value>
+    <comment>register_repeat_password</comment>
+  </data>
+  <data name="register_password" xml:space="preserve">
+    <value>Пароль</value>
+    <comment>register_password</comment>
+  </data>
+  <data name="register_shownname" xml:space="preserve">
+    <value>Показываемое имя</value>
+    <comment>register_shownname</comment>
+  </data>
+  <data name="register_email" xml:space="preserve">
+    <value>E-Mail</value>
+    <comment>register_email</comment>
+  </data>
+  <data name="admin_controlpanel" xml:space="preserve">
+    <value>Панель Управления</value>
+    <comment>admin_controlpanel</comment>
+  </data>
+  <data name="admin_projects" xml:space="preserve">
+    <value>Проекты</value>
+    <comment>admin_projects</comment>
+  </data>
+  <data name="issue_edit_header" xml:space="preserve">
+    <value>Редактирование Задачи</value>
+    <comment>issue_edit_header</comment>
+  </data>
 </root>
